# beanstick

./: .env.example  .gitignore  DOCUMENTATION.md  README.md  package.json  pnpm-lock.yaml  start-all.sh  tsconfig.json
agents/: manager.ts
agents/attestation-agent/: index.ts
agents/crypto-agent/: index.ts
agents/fiat-agent/: index.ts
agents/payment-verify/: banksim.ts  webhook.ts  workflow.yaml
agents/runtime/: index.ts
agents/watcher-agent/: index.ts
apps/web/: package.json  pnpm-lock.yaml
contracts/script/: Deploy.s.sol  DeployINFT.s.sol  DeployTestToken.s.sol
contracts/src/: AgentRegistry.sol  Escrow.sol  INFT.sol  (+3 more)
docs/: BIBLE.md
programs/beanstick/: Anchor.toml  Cargo.toml
programs/beanstick/src/: errors.rs  events.rs  lib.rs
programs/beanstick/src/instructions/: commit_reputation_root.rs  dispute_escrow.rs  initialize_config.rs  lock_escrow.rs  mod.rs  refund_escrow.rs  register_lp.rs  release_escrow.rs  submit_zktls_attestation.rs
programs/beanstick/src/state/: attestation_account.rs  escrow_account.rs  lp_account.rs  mod.rs  protocol_config.rs  rail_account.rs  reputation_root.rs  user_account.rs
scripts/: demo-axl-cross-node.ts  e2e-agent-flow.ts  e2e-escrow-release.ts  e2e-full-flow.ts  e2e-g14-flow.ts  e2e-kh-webhook.ts  irl-0g-compute.ts  irl-0g-storage.ts  lock-test-order-basesep.ts  mcp-server-entry.ts  run-webhook-receiver.ts  test-inft.ts  test-x402-e2e.ts  verify-0g.ts  verify-axl.ts  verify-keeperhub.ts  verify-mcp-stdio.ts  verify-mcp.ts  verify-section7.ts  verify-section9.ts  verify-x402.ts
tests/: auradb.test.ts
(+89 files in other folders)
