[package]
name = "beanstick"
version = "0.1.0"
description = "Beanstick - Autonomous Fiat-to-Crypto Settlement Network on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "beanstick"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.17"
bytemuck = { version = "1.14.0", features = ["derive"] }
